--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -20,6 +20,8 @@
 
 = render reviews
 
-= link_to 'Edit', edit_category_product_path(category.id, product.id)
+- if current_user == product.user
+  = link_to 'Edit', edit_category_product_path(category.id, product.id)
+
 \|
 = link_to 'Back', category_products_path, class: 'btn btn-primary'
