--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,9 +13,26 @@
       .container-fluid
         .navbar-header
           %span.navbar-brand #{AppConfig.workshops_name}
-        %p.navbar-text.navbar-right
-          Links should go here
+        %ul.nav.navbar-nav.navbar-right
+          - if user_signed_in?
+            %li
+              = link_to "Log out #{current_user.name}", destroy_user_session_path, {:method => delete}
+          - else
+            %li
+              = link_to "Sign up", new_user_registration_path
+            %li
+              = link_to "Login", new_user_session_path
+
+
     .container-fluid
       .row
         .col-lg-12
           = yield
+
+-#<ul class="nav navbar-nav navbar-right">
+-#  <% if user_signed_in? %>
+-#    <li><%= link_to "Wyloguj #{current_user.email}", destroy_user_session_path, :method => :delete %></li>
+-#  <% else %>
+-#    <li><%= link_to "Zaloguj się", new_user_session_path %></li>
+-#  <% end %>
+-#  </ul>
