--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -9,19 +9,25 @@
     = javascript_include_tag 'application'
 
   %body
-    %nav.navbar.navbar-default
+    %nav.navbar.navbar-default{:role => "navigation"}
       .container-fluid
         .navbar-header
-          %span.navbar-brand #{AppConfig.workshops_name}
-        %ul.nav.navbar-nav.navbar-right
-          - if user_signed_in?
-            %li
-              = link_to "Log out #{current_user.name}", destroy_user_session_path, {:method => delete}
-          - else
-            %li
-              = link_to "Sign up", new_user_registration_path
-            %li
-              = link_to "Login", new_user_session_path
+          %button.navbar-toggle{"data-target"=>"#navbarasd", "data-toggle"=>"collapse", :type => "button"}
+            %span.sr-only Toggle navigation
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          = link_to AppConfig.workshops_name, root_path, :class => "navbar-brand"
+        #navbarasd.collapse.navbar-collapse
+          %ul.nav.navbar-nav.navbar-right
+            - if user_signed_in?
+              %li
+                = link_to "Log out #{current_user.name}", destroy_user_session_path, {:method => delete}
+            - else
+              %li
+                = link_to "Sign up", new_user_registration_path
+              %li
+                = link_to "Login", new_user_session_path
 
 
     .container-fluid
@@ -29,10 +35,27 @@
         .col-lg-12
           = yield
 
--#<ul class="nav navbar-nav navbar-right">
--#  <% if user_signed_in? %>
--#    <li><%= link_to "Wyloguj #{current_user.email}", destroy_user_session_path, :method => :delete %></li>
--#  <% else %>
--#    <li><%= link_to "Zaloguj się", new_user_session_path %></li>
--#  <% end %>
--#  </ul>
+-#<nav class="navbar navbar-inverse">
+-#  <div class="container-fluid">
+-#    <div class="navbar-header">
+-#      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+-#        <span class="icon-bar"></span>
+-#        <span class="icon-bar"></span>
+-#        <span class="icon-bar"></span>
+-#      </button>
+-#      <a class="navbar-brand" href="#">WebSiteName</a>
+-#    </div>
+-#    <div class="collapse navbar-collapse" id="myNavbar">
+-#      <ul class="nav navbar-nav">
+-#        <li class="active"><a href="#">Home</a></li>
+-#        <li><a href="#">Page 1</a></li>
+-#        <li><a href="#">Page 2</a></li>
+-#        <li><a href="#">Page 3</a></li>
+-#      </ul>
+-#      <ul class="nav navbar-nav navbar-right">
+-#        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+-#        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+-#      </ul>
+-#    </div>
+-#  </div>
+-#</nav>
