--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -14,6 +14,7 @@
       - if current_user && current_user.admin?
         %td= link_to 'Edit', edit_category_path(category)
         %td= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Show products', category_products_path(category)
 
 %br
 - if current_user && current_user.admin?
