--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,6 +31,8 @@
 
 
     .container-fluid
+      - flash.each do |message_type, message|
+        = content_tag(:div, message, class: "alert alert-#{message_type}")
       .row
         .col-lg-12
           = yield
