--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,22 +1,26 @@
+= link_to 'Back to categories list', categories_path, :class => "btn btn-primary"
 %h1 Listing products
 
-%table
-  %tr
-    %th Title
-    %th Description
-    %th Price
-    %th
-    %th
-    %th
+%h3
+  Products in
+  = category.name
 
-  - products.each do |product|
-    %tr
-      %td= product.title
-      %td= product.description
-      %td= product.price
-      %td= link_to 'Show', category_product_path(product.category, product)
-      - if current_user == product.user
-        %td= link_to 'Edit', edit_category_product_path(product.category, product)
-        %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
+.row
+  - category.products.each do |product|
+    .col-lg-12.product
+      .col-lg-3.col-lg-offset-1
+        %h4.product_title
+          = product.title
+      .col-lg-5
+        %p.product_desc
+          = product.description
+      .col-lg-1
+        %p.product_price
+          = product.price
+      .col-lg-2
+        = link_to 'Show', category_product_path(category.id, product.id), :class => "btn btn-warning"
+        - if current_user == product.user
+          %td= link_to 'Edit', edit_category_product_path(product.category, product)
+          %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
 
-%br
+    %hr.division_line
