--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,6 +1,3 @@
-%p#notice= notice
-%p#error= flash[:error]
-
 %p
   %b Title:
   = product.title
@@ -21,7 +18,7 @@
 = render reviews
 
 - if current_user == product.user
-  = link_to 'Edit', edit_category_product_path(category.id, product.id)
+  = link_to 'Edit', edit_category_product_path(category.id, product.id), class: 'btn btn-default'
 
 \|
 = link_to 'Back', category_products_path, class: 'btn btn-primary'
