--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,26 +1,25 @@
-= link_to 'Back to categories list', categories_path, :class => "btn btn-primary"
-%h1 Listing products
-
-%h3
-  Products in
+= link_to 'Back to categories list', categories_path, :class => "btn btn-default"
+%h1
+  Listing products in
   = category.name
 
-.row
-  - category.products.each do |product|
-    .col-lg-12.product
-      .col-lg-3.col-lg-offset-1
-        %h4.product_title
-          = product.title
-      .col-lg-5
-        %p.product_desc
-          = product.description
-      .col-lg-1
-        %p.product_price
-          = product.price
-      .col-lg-2
-        = link_to 'Show', category_product_path(category.id, product.id), :class => "btn btn-warning"
-        - if current_user == product.user
-          %td= link_to 'Edit', edit_category_product_path(product.category, product)
-          %td= link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
-
-    %hr.division_line
+- category.products.each do |product|
+  .row.well
+    .col-sm-12
+      %p.product-price.pull-right.lead
+        %span.glyphicon.glyphicon-usd{aria: {hidden: true}}
+        = product.price
+      %h3.product-title
+        = link_to product.title, category_product_path(category.id, product.id)
+      %p.product-desc.lead
+        = product.description
+      %p.product-rating
+        Average rating:
+        = product.average_rating
+      %p.product-reviews
+        Reviews:
+        = product.product_reviews_count
+      = link_to 'Show', category_product_path(category.id, product.id), :class => "btn btn-primary btn-lg pull-right"
+      - if current_user == product.user
+        = link_to 'Edit', edit_category_product_path(product.category, product)
+        = link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
