--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,3 +1,19 @@
+.product {
+  margin-top: 20px;
+}
+
+.product-title {
+  margin-top: 0;
+}
+
 .product-desc {
   max-width: 90%;
+}
+
+.ratings {
+  margin-top: 40px;
+}
+
+.product-header {
+  margin-top: 15px;
 }
