Reviews view oon product site

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -26,6 +26,8 @@
 
 
 %h3 Reviews
-= render reviews
-= render 'reviews/form'
+.well.reviews
+  = render reviews
+  %h4 Your review
+  = render 'reviews/form'
 
