Styling all forms

--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -1,7 +1,8 @@
-%h1 Editing category
-
-= render 'form'
-
-= link_to 'Show', category
-\|
 = link_to 'Back', categories_path, class: 'btn btn-primary'
+
+.product-form
+  %h1 Editing category
+  = render 'form'
+
+-#= link_to 'Show', category, class: 'btn btn-primary'
+
