--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for category do |f|
+= form_for category, :html => {:class => 'form-horizontal col-xs-8'} do |f|
   - if category.errors.any?
     #error_explanation
       %h2= "#{pluralize(category.errors.count, "error")} prohibited this category from being saved:"
@@ -7,7 +7,9 @@
           %li= msg
 
   .form-group
-    = f.label :name
-    = f.text_field :name, class: 'form-control'
-
-  = f.submit 'Save', class: 'btn btn-default'
+    = f.label :name, :class => 'col-sm-3 control-label'
+    .col-sm-9
+      = f.text_field :name, class: 'form-control'
+  .form-group
+    .col-sm-offset-3.col-sm-9
+      = f.submit 'Save changes', class: 'btn btn-success'
