--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -15,7 +15,7 @@
         %td= category.name
         %td
           .table-buttons.centered
-            = link_to 'Show category', category, class: 'btn btn-primary btn btn-sm'
+            = link_to 'Add product', category, class: 'btn btn-success'
             = link_to 'Show products', category_products_path(category), class: 'btn btn-primary'
         - if current_user && current_user.admin?
           %td
