--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,12 +1,14 @@
-%h2
-  Category:
-  = category.name
+= link_to 'Back to categories', categories_path, class: 'btn btn-primary'
+
+.header
+  %h2
+    Category:
+    = category.name
+
 %p
   - if user_signed_in?
-    %h3 New product
-    = render 'products/form'
+    .product-form
+      %h3 Add new product to this category
+      = render 'products/form'
 
-  - if current_user && current_user.admin?
-    = link_to 'Edit', edit_category_path(category)
-\|
-= link_to 'Back', categories_path, class: 'btn btn-primary'
+
