--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,12 +1,34 @@
 %h2 Sign up
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :firstname, required: true, autofocus: true
-    = f.input :lastname, required: true, autofocus: true
-    = f.input :email, required: true, autofocus: true
-    = f.input :password, required: true
-    = f.input :password_confirmation, required: true
-  .form-actions
-    = f.button :submit, "Sign up"
-= render "devise/shared/links"
+.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2
+  .panel.panel-info
+    .panel-heading
+      .panel-title Sign up form
+    .panel-body
+      = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal', role: 'form'}) do |f|
+        = f.error_notification
+        .form-group
+          = f.label :firstname, :class => 'col-md-3 control-label'
+          .col-md-9
+            = f.input_field :firstname, required: true, autofocus: true, class: 'form-control'
+        .form-group
+          = f.label :lastname, :class => 'col-md-3 control-label'
+          .col-md-9
+            = f.input_field :lastname, required: true, autofocus: true, class: 'form-control'
+        .form-group
+          = f.label :email, :class => 'col-md-3 control-label'
+          .col-md-9
+            = f.input_field :email, required: true, autofocus: true, class: 'form-control'
+        .form-group
+          = f.label :password, :class => 'col-md-3 control-label'
+          .col-md-9
+            = f.input_field :password, required: true, class: 'form-control'
+        .form-group
+          = f.label :password_confirmation, :class => 'col-md-3 control-label'
+          .col-md-9
+            = f.input_field :password_confirmation, required: true, class: 'form-control'
+        .form-group
+          .col-md-offset-3.col-md-9
+            = f.button :submit, "Sign up", class: 'btn btn-info'
+            = render "devise/shared/links"
+
+
