--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [category, product] do |f|
+= form_for [category, product], :html => {:class => 'form-horizontal col-xs-8'} do |f|
   - if product.errors.any?
     #error_explanation
       %h2= "#{pluralize(product.errors.count, "error")} prohibited this product from being saved:"
@@ -7,13 +7,17 @@
           %li= msg
 
   .form-group
-    = f.label :title
-    = f.text_field :title, class: 'form-control'
+    = f.label :title, :class => 'col-sm-3 control-label'
+    .col-sm-9
+      = f.text_field :title, class: 'form-control'
   .form-group
-    = f.label :description
-    = f.text_area :description, class: 'form-control'
+    = f.label :description, :class => 'col-sm-3 control-label'
+    .col-sm-9
+      = f.text_area :description, class: 'form-control'
   .form-group
-    = f.label :price
-    = f.text_field :price, class: 'form-control'
-
-  = f.submit 'Save', class: 'btn btn-default'
+    = f.label :price, :class => 'col-sm-3 control-label'
+    .col-sm-9
+      = f.text_field :price, class: 'form-control'
+  .form-group
+    .col-sm-offset-3.col-sm-9
+      = f.submit 'Add product', class: 'btn btn-success'
