Fix buttons colors

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,4 +1,4 @@
-= link_to 'Back to categories list', categories_path, :class => "btn btn-default"
+= link_to 'Back to categories list', categories_path, :class => "btn btn-primary"
 %h1
   Listing products in
   = category.name
