--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -19,7 +19,14 @@
       %p.product-reviews
         Reviews:
         = product.product_reviews_count
-      = link_to 'Show', category_product_path(category.id, product.id), :class => "btn btn-primary btn-lg pull-right"
-      - if current_user == product.user
-        = link_to 'Edit', edit_category_product_path(product.category, product)
-        = link_to 'Destroy', category_product_path(product.category, product), method: :delete, data: { confirm: 'Are you sure?' }
+      .buttons
+        = link_to 'Show', category_product_path(category.id, product.id),
+          :class => "btn btn-primary btn-lg pull-right"
+        - if current_user == product.user
+          = link_to 'Edit',
+            edit_category_product_path(product.category, product), class: 'btn btn-warning'
+          = link_to 'Destroy',
+            category_product_path(product.category, product),
+            method: :delete,
+            data: { confirm: 'Are you sure?' },
+            class: 'btn btn-danger'
