--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -22,6 +22,8 @@
           %ul.nav.navbar-nav.navbar-right
             - if user_signed_in?
               %li
+                = link_to "Your profile", profile_path
+              %li
                 = link_to "Log out #{current_user.firstname}", destroy_user_session_path, {:method => :delete}
             - else
               %li
