--- a/app/views/users/partials/_reviews.html.haml
+++ b/app/views/users/partials/_reviews.html.haml
@@ -4,12 +4,15 @@
       Your last reviews
   .panel-body
     %ul.list-group
-    - current_user.reviews.last(5).reverse.each do |review|
-      %li.list-group-item
-        %p
-          = link_to review.product.title, category_product_path(review.product.category, review.product)
-        %p
-          = review.content
-        %p
-          = review.created_at.strftime('%H:%m %d-%m-%Y')
-    %hr
+      - if current_user.reviews.present?
+        - current_user.reviews.last(5).reverse.each do |review|
+          %li.list-group-item
+            %p
+              = link_to review.product.title, category_product_path(review.product.category, review.product)
+            %p
+              = review.content
+            %p
+              = review.created_at.strftime('%H:%m %d-%m-%Y')
+        %hr
+      - else
+        %p You have no reviews yet
