--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -20,6 +20,7 @@
               = link_to 'Add product', category, class: 'btn btn-success'
         - if current_user && current_user.admin?
           %td
+            = link_to 'Show category', category_path(category), class: 'btn btn-primary btn-sm'
             = link_to 'Edit category', edit_category_path(category), class: 'btn btn-warning btn-sm'
             = link_to 'Destroy category', category, method: :delete, class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' }
 
