--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,7 +1,6 @@
-%h1 Editing product
+= link_to 'Back', :back, class: 'btn btn-primary'
+%h1 Editing product #{ link_to product.title, category_product_path(category, product)}
 
 = render 'form'
 
-= link_to 'Show', category_product_path(category, product)
-\|
-= link_to 'Back', category_path(category)
+
