Products view and product view improvements

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,4 +1,4 @@
-= link_to 'Back', :back, :class => "btn btn-primary"
+= link_to 'Back to products', category_products_path(category), :class => "btn btn-primary"
 
 .row.product.thumbnail
   .col-sm-12
